level 1 design complete

--- a/Day1-Bootstrap/Design/cars_create.html
+++ b/Day1-Bootstrap/Design/cars_create.html
@@ -27,6 +27,23 @@
           </div>
         </div>
     </nav>
+    <h3> <a href="cars_list.html" class="btn btn-light">Go Back</a>Add Car</h3>
+    <div class="container">
+    
+      <div class="form-group mb-3">
+            <label for="number" class="form-label">Car Number:</label>
+            <input type="text" class="form-control" id="number" placeholder="please enter car number"/>
+        </div>
+        <div class="form-group mb-3">
+            <label for="model" class="form-label">Car Model:</label>
+            <input type="text" class="form-control" id="model" placeholder="please enter car model"/>
+        </div>
+        <div class="form-group mb-3">
+            <label for="type" class="form-label">Car Type(SUV/ CUV/ Sedan):</label>
+            <input type="text" class="form-control" id="type" placeholder="please enter car type"/>
+        </div>
+        <button class="btn btn-primary">Create Car</button>
+    </div>
 
     
 
